Mixed content error fixed

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>TwitchZAPP | Victor Catamo</title>
+		<title>StreamerZapp | Victor Catamo</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -21,7 +21,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><strong>TwitchZAPP</strong> <a href="http://catamo.github.io">by Victor Catamo</a></h1>
+						<h1><strong>StreamerZapp</strong> <a href="http://catamo.github.io">by Victor Catamo</a></h1>
 						<nav>
 							<ul>
 								<li><a href="#footer" id="btnMore" class="icon fa-info-circle">More</a></li>
