Game added to template

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 								<hr />
 								{{#if isOnline}}
 									<h3><i>Currently streaming</i></h3>
-									<p>{{status}}</p>
+									<p>{{game}}: {{status}}</p>
 								{{else}}
 									<h3><i>Offline</i></h3>
 								{{/if}}
